maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:57: error: '=>' expected but '}' found.
      }
      ^